# proot-rs

./: Cargo.toml  README.md  TODO.android_syscalls.md  implementation_plan.md
loader-shim/: Cargo.toml  build.rs  termux-loader.sh
loader-shim/src/: main.rs
proot-rs/: Cargo.toml
proot-rs/examples/: accept_smoke.rs  at_edges_smoke.rs  at_new_smoke.rs  at_smoke.rs  exec_smoke.rs  remap_smoke.rs  shebang_smoke.rs
proot-rs/src/: cli.rs  errors.rs  main.rs  utils.rs
proot-rs/src/filesystem/: binding.rs  canonicalization.rs  ext.rs  fs.rs  mod.rs  substitution.rs  temp.rs  translation.rs  validation.rs
proot-rs/src/kernel/: groups.rs  syscall.rs
proot-rs/src/kernel/execve/: enter.rs  exit.rs  load_info.rs  loader.rs
proot-rs/src/kernel/execve/binfmt/: elf.rs  shebang.rs
proot-rs/src/kernel/standard/: chdir.rs  chmod_access_mknod_at.rs  dir_link_attr.rs  link_at.rs  link_rename.rs  open.rs  open_at.rs  standard_syscall.rs  stat_at.rs  sym_link.rs  sym_link_at.rs  uname.rs  unlink_mkdir_at.rs
proot-rs/src/process/: proot.rs  sigactions.rs  tracee.rs
proot-rs/src/register/: mem.rs  reader.rs  regs.rs  writer.rs
rootfs-alpine/lib/: libapk.so.3.12.0  libcrypto.so.1.1  libssl.so.1.1
rootfs-alpine/lib/apk/db/: installed  scripts.tar  triggers
rootfs-alpine/sbin/: apk
rootfs-alpine/usr/lib/: libtls.so.20.0.3
sc/: Cargo.toml
scripts/: android-smoke.sh  mkrootfs.sh
tests/: at_family.bats  examples.bats  helper.bash
tools/: android_trampoline  android_trampoline.c
